--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <title>This is my test site</title>
     <h1> Ilya Koshevenko </h1><br>
-    <img src= "https://avatars.mds.yandex.net/get-entity_search/901699/415759980/S600xU_2x">
+    <img src= "https://avatars.mds.yandex.net/get-entity_search/901699/415759980/S600xU_2x" width="300" height="300" >
 </head>
 <body>
      <h3> Ave, cvirites! </h3> <br>
         This is my demo site about me. I'm beginer(junior) full-stack developer<br>
+     <img src="https://www.instagram.com/ilyakoshevenko/p/CVRvBf0IyAJ/?img_index=1">
         There I will write some code, shows my skills.<br>
         <a href= "https://www.instagram.com/ilyakoshevenko?igsh=MW1seTlwN3U2cWVlOA==">My instagram</a>
 </body>
