--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
      <h3> Ave, cvirites! </h3> <br>
         This is my demo site about me. I'm beginer(junior) full-stack developer<br>
-     <img src="https://www.instagram.com/ilyakoshevenko/p/CVRvBf0IyAJ/?img_index=1">
+     <img src="https://sun9-6.userapi.com/impg/QP0F264FX8wwxsXBwVR-Wy9XS0ypUVntI5aXtQ/a6DjH3VHhg4.jpg?size=808x1080&quality=95&sign=6bd7f0347632c82f9b8a67f8ed3fb1a8&type=album"> <br>
         There I will write some code, shows my skills.<br>
         <a href= "https://www.instagram.com/ilyakoshevenko?igsh=MW1seTlwN3U2cWVlOA==">My instagram</a>
 </body>
