--- a/index.html
+++ b/index.html
@@ -3,14 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>This is my test site</title>
+
+    <link rel="stylesheet" href="styles.css">
+
     <h1> Ilya Koshevenko </h1><br>
-    <img src= "https://avatars.mds.yandex.net/get-entity_search/901699/415759980/S600xU_2x" width="300" height="300" >
+    <img src= "https://avatars.mds.yandex.net/get-entity_search/901699/415759980/S600xU_2x" width="500" height="500" >
 </head>
 <body>
      <h3> Ave, cvirites! </h3> <br>
-        This is my demo site about me. I'm beginer(junior) full-stack developer<br>
+        <p>This is my demo site about me. I'm beginer(junior) full-stack developer</p> <br>
      <img src="https://sun9-6.userapi.com/impg/QP0F264FX8wwxsXBwVR-Wy9XS0ypUVntI5aXtQ/a6DjH3VHhg4.jpg?size=808x1080&quality=95&sign=6bd7f0347632c82f9b8a67f8ed3fb1a8&type=album"> <br>
         There I will write some code, shows my skills.<br>
         <a href= "https://www.instagram.com/ilyakoshevenko?igsh=MW1seTlwN3U2cWVlOA==">My instagram</a>
+     <h3> my tellegram: </h3>
+    <a  href="http://t.me/ilk337">
+    <img class="square" src="https://avatars.mds.yandex.net/i?id=5551474377a06c8416c4fe2698ed5d43e74aa21d-5480389-images-thumbs&n=13">
+    </a>
 </body>
 </html>
