--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
           alt="This is my dog (Dogo-Argentino)"
           style="padding: 20px; " > <br>
         There I will write some code, shows my skills.<br>
+     <div class="horizontal">
         <a href= "https://www.instagram.com/ilyakoshevenko?igsh=MW1seTlwN3U2cWVlOA=="> <img class="square"  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR21SRtolNjDeiw3_iqTw3bKfGcN0TGIpChug&s">
         </a>
-    <a  href="http://t.me/ilk337">
-    <img class="square" src="https://avatars.mds.yandex.net/i?id=5551474377a06c8416c4fe2698ed5d43e74aa21d-5480389-images-thumbs&n=13">
-    </a>
+        <a href="http://t.me/ilk337">
+        <img class="square" src="https://avatars.mds.yandex.net/i?id=5551474377a06c8416c4fe2698ed5d43e74aa21d-5480389-images-thumbs&n=13">
+        </a>
+     </div>
 </body>
 </html>
